--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,7 +49,7 @@ footer p{color: gold;
             margin-bottom: 2px}
 
 
-.showcategorias {margin: 50px auto 0px auto;
+.showcategorias {margin: 50px auto 0 auto;
                 max-width: 700px;
                 width: 100%}
 
@@ -61,3 +61,12 @@ footer p{color: gold;
     .main .productosmain{width: 48.5%}
 }
 
+/*mostrarproductos.php*/
+.fuente{
+    font-family: 'Ubuntu', sans-serif;
+}
+
+/*destallesproducto.php*/
+.ocultar{
+    display: none;
+}
